Fix the price boxes headers were not clipped by theirs containers which had rounded corners

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -494,6 +494,7 @@ footer .footer-below {
         border-radius: 8px;
         padding-left: 0;
         padding-right: 0;
+        overflow: hidden;
     }
 }
 
